--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -15,85 +15,143 @@ body {
     width: 100vw;
 }
 
-header {
-    height: 20vh;
-    width: 100vw;
-    position: fixed;
-    z-index: 100;
-    nav {
-        display: flex;
-        flex-direction: column;
-        height: 0;
-        transition: height 500ms;
-        .select {
-            height: 50%;
-            width: 100%;
-            color: white;
+@media only screen and (min-width: 501px) {
+    header {
+        height: 20vh;
+        width: 100vw;
+        position: fixed;
+        z-index: 100;
+        nav {
+            display: flex;
+            flex-direction: column;
+            height: 0;
+            transition: height 500ms;
+            .select {
+                height: 50%;
+                width: 100%;
+                color: white;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            
+            .options {
+                display: flex;
+                align-items: center;
+                justify-content: space-evenly;
+                height: 50%;
+                width: 100%;
+            }
+            
+            button, p {
+                visibility: hidden;
+            }  
+        }
+        
+        .arrow-container {
             display: flex;
             align-items: center;
             justify-content: center;
+            img {
+                width: 100px;
+                height: 50px;
+            }
         }
-        
-        .options {
-            display: flex;
-            align-items: center;
-            justify-content: space-evenly;
-            height: 50%;
-            width: 100%;
-        }
-        
-        button, p {
-            visibility: hidden;
-        }  
     }
     
-    .arrow-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        img {
-            width: 100px;
-            height: 50px;
+    
+    header:hover {
+        nav {
+            transition: height 500ms;
+            height: 100%;
+            background: transparent;
+            box-shadow: 0 4px 8px black;
+            p {
+                visibility: visible;
+                font-size: larger;
+                text-align: center;
+            }
+            button {
+                visibility: visible;
+                font-family: inherit;
+                font-size: large;
+                width: 20%;
+                height: 100%;
+                background: transparent;
+                border: none;
+                transition: color 150ms;
+    
+                &:hover {
+                    transition: color 150ms;
+                    color: white;
+                }
+                &:active {
+                    transition: color 150ms;
+                    color: black;
+                }
+            }
+        }
+    
+        .arrow-container {
+            img {
+                visibility: hidden;
+            }
         }
     }
 }
 
 
-header:hover {
-    nav {
-        transition: height 500ms;
-        height: 100%;
-        background: transparent;
-        box-shadow: 0 4px 8px black;
-        p {
-            visibility: visible;
-            font-size: larger;
-            text-align: center;
-        }
-        button {
-            visibility: visible;
-            font-family: inherit;
-            font-size: large;
-            width: 25%;
+@media only screen and (max-width: 500px) {
+    header {
+        height: 20vh;
+        width: 100vw;
+        position: fixed;
+        z-index: 100;
+        nav {
+            transition: height 500ms;
             height: 100%;
             background: transparent;
-            border: none;
-            transition: color 500ms;
+            box-shadow: 0 4px 8px black;
 
-            &:hover {
-                transition: color 500ms;
+            .select {
+                height: 50%;
+                width: 100%;
                 color: white;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
-            &:active {
-                transition: color 500ms;
-                color: black;
+            
+            .options {
+                display: flex;
+                align-items: center;
+                justify-content: space-evenly;
+                height: 50%;
+                width: 100%;
+            }
+            p {
+                font-size: larger;
+                text-align: center;
+            }
+            button {
+                font-family: inherit;
+                font-size: large;
+                width: 20%;
+                height: 100%;
+                background: transparent;
+                border: none;
+                transition: color 150ms;
+
+                &:active {
+                    transition: color 150ms;
+                    color: white;
+                }
             }
         }
-    }
-
-    .arrow-container {
-        img {
-            visibility: hidden;
+        .arrow-container {
+            img {
+                display: none;
+            }
         }
     }
 }
