--- a/src/sass/quizbody.scss
+++ b/src/sass/quizbody.scss
@@ -1,138 +1,281 @@
-main {
-    position: relative;
-    #select-quiz {
-        position: absolute;
-        top: 20vh;
-        right: 5%;
-        left: 5%;
-        height: 70vh;
-        background-color: rgba(0,0,0,0.7);
-        z-index: 20;
-        color: white;
-        border: none;
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: 20% 20% 1fr;
-        
-        .select-header {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: xx-large;
-        }
-        
-        #selected-answers {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: x-large;
-        }
 
-        #answered-questions {
-            display: grid;
-            grid-template-columns: 50% 50%;
-
-            .answer-grid1,
-            .answer-grid2 {
-                display: grid;
-                grid-template-columns: 100%;
-                grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-            }
-        }
-    }
-    
-    .quiz-body {
-        position: absolute;
-        top: 20vh;
-        right: 5%;
-        left: 5%;
-        height: 70vh;
-        border: none;
-        background: transparent;
-        box-shadow: 0px 10px 30px black;
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: 1fr 10%;
-        
-        .question-answer {
+@media only screen and (min-width: 501px) {
+    main {
+        position: relative;
+        #select-quiz {
+            position: absolute;
+            top: 20vh;
+            right: 5%;
+            left: 5%;
+            height: 70vh;
+            background-color: rgba(0,0,0,0.7);
+            z-index: 20;
+            color: white;
+            border: none;
             display: grid;
             grid-template-columns: 100%;
-            grid-template-rows: 10% 25% 1fr;
-
-            .quiz-title {
+            grid-template-rows: 20% 20% 1fr;
+            
+            .select-header {
+                width: 100%;
+                height: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                font-size: xx-large;
             }
             
-            .question-container {
+            #selected-answers {
+                width: 100%;
+                height: 100%;
                 display: flex;
-                justify-content: center;
                 align-items: center;
-                
-                .question-box {
-                    padding: auto 0;
-                    overflow-wrap: normal;
-                    text-align: center;
+                justify-content: center;
+                font-size: x-large;
+            }
+    
+            #answered-questions {
+                display: grid;
+                grid-template-columns: 50% 50%;
+    
+                .answer-grid1,
+                .answer-grid2 {
+                    display: grid;
+                    grid-template-columns: 100%;
+                    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
                 }
             }
-
-
-            .answers-box {
+        }
+        
+        .quiz-body {
+            position: absolute;
+            top: 20vh;
+            right: 5%;
+            left: 5%;
+            height: 70vh;
+            border: none;
+            background: transparent;
+            box-shadow: 0px 10px 30px black;
+            display: grid;
+            grid-template-columns: 100%;
+            grid-template-rows: 1fr 10%;
+            
+            .question-answer {
                 display: grid;
                 grid-template-columns: 100%;
-                grid-template-rows: 1fr 1fr 1fr 1fr;
-
+                grid-template-rows: 10% 25% 1fr;
+    
+                .quiz-title {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+                
+                .question-container {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    
+                    .question-box {
+                        padding: auto 0;
+                        overflow-wrap: normal;
+                        text-align: center;
+                    }
+                }
+    
+    
+                .answers-box {
+                    display: grid;
+                    grid-template-columns: 100%;
+                    grid-template-rows: 1fr 1fr 1fr 1fr;
+    
+                    button {
+                        text-align: center;
+                        width: 100%;
+                        height: 100%;
+                        padding: 0 5px 5px 0;
+                        border: none;
+                        font-family: inherit;
+                        background: transparent;
+                        visibility: hidden;
+                        
+                        &:hover {
+                            cursor: pointer;
+                        }
+                        
+                        &:disabled {
+                            background: transparent;
+                            color: black;
+                        }
+                    }
+                }
+            }
+            .btn-container {
+                display: grid;
+                grid-template-columns: 30% 1fr 30%;
                 button {
-                    text-align: center;
                     width: 100%;
                     height: 100%;
-                    padding: 0 5px 5px 0;
-                    border: none;
-                    font-family: inherit;
                     background: transparent;
+                    text-align: center;
+                    border: none;
+                    transition: color 150ms;
                     visibility: hidden;
+                    font-size: x-large;
                     
                     &:hover {
                         cursor: pointer;
+                        opacity: 1;
+                        transition: color 150ms;
+                        color: white;
                     }
-                    
-                    &:disabled {
-                        background: transparent;
+
+                    &:active {
+                        transition: color 150ms;
                         color: black;
                     }
+                    
+                }
+                .save-slot {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                 }
             }
         }
-        .btn-container {
+    }
+
+}
+
+@media only screen and (max-width: 500px) {
+    main {
+        position: relative;
+        #select-quiz {
+            position: absolute;
+            top: 20vh;
+            right: 5%;
+            left: 5%;
+            height: 70vh;
+            background-color: rgba(0,0,0,0.7);
+            z-index: 20;
+            color: white;
+            border: none;
             display: grid;
-            grid-template-columns: 30% 1fr 30%;
-            button {
+            grid-template-columns: 100%;
+            grid-template-rows: 20% 20% 1fr;
+            
+            .select-header {
                 width: 100%;
                 height: 100%;
-                background: transparent;
-                text-align: center;
-                border: none;
-                transition: color 500ms;
-                visibility: hidden;
-                font-size: x-large;
-                
-                &:hover {
-                    cursor: pointer;
-                    opacity: 1;
-                    transition: color 500ms;
-                    color: white;
-                }
-                
-            }
-            .save-slot {
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                font-size: xx-large;
+            }
+            
+            #selected-answers {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: x-large;
+            }
+    
+            #answered-questions {
+                display: grid;
+                grid-template-columns: 50% 50%;
+    
+                .answer-grid1,
+                .answer-grid2 {
+                    display: grid;
+                    grid-template-columns: 100%;
+                    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+                }
+            }
+        }
+        
+        .quiz-body {
+            position: absolute;
+            top: 20vh;
+            right: 5%;
+            left: 5%;
+            height: 70vh;
+            border: none;
+            background: transparent;
+            box-shadow: 0px 10px 30px black;
+            display: grid;
+            grid-template-columns: 100%;
+            grid-template-rows: 1fr 10%;
+            
+            .question-answer {
+                display: grid;
+                grid-template-columns: 100%;
+                grid-template-rows: 10% 25% 1fr;
+    
+                .quiz-title {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+                
+                .question-container {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    
+                    .question-box {
+                        padding: auto 0;
+                        overflow-wrap: normal;
+                        text-align: center;
+                    }
+                }
+    
+    
+                .answers-box {
+                    display: grid;
+                    grid-template-columns: 100%;
+                    grid-template-rows: 1fr 1fr 1fr 1fr;
+    
+                    button {
+                        text-align: center;
+                        width: 100%;
+                        height: 100%;
+                        padding: 0 5px 5px 0;
+                        border: none;
+                        font-family: inherit;
+                        background: transparent;
+                        visibility: hidden;
+                        &:disabled {
+                            background: transparent;
+                            color: black;
+                        }
+                    }
+                }
+            }
+            .btn-container {
+                display: grid;
+                grid-template-columns: 30% 1fr 30%;
+                button {
+                    width: 100%;
+                    height: 100%;
+                    background: transparent;
+                    text-align: center;
+                    border: none;
+                    visibility: hidden;
+                    font-size: x-large;
+                    transition: color 150ms;
+
+                    &:active {
+                        transition: color 150ms;
+                        color: white;
+                    }
+                }
+                .save-slot {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
             }
         }
     }
