--- a/src/sass/quizbody.scss
+++ b/src/sass/quizbody.scss
@@ -8,17 +8,19 @@
             right: 5%;
             left: 5%;
             height: 70vh;
-            background-color: rgba(0,0,0,0.7);
+            background: #1a202c;
             z-index: 20;
             color: white;
-            border: none;
+            border-radius: 10px;
             display: grid;
             grid-template-columns: 100%;
             grid-template-rows: 20% 20% 1fr;
+            box-shadow: 0px 10px 30px black;
             
             .select-header {
                 width: 100%;
                 height: 100%;
+                color: white;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -33,11 +35,11 @@
                 justify-content: center;
                 font-size: x-large;
             }
-    
+            
             #answered-questions {
                 display: grid;
                 grid-template-columns: 50% 50%;
-    
+                
                 .answer-grid1,
                 .answer-grid2 {
                     display: grid;
@@ -54,22 +56,28 @@
             left: 5%;
             height: 70vh;
             border: none;
+            border-radius: 10px;
             background: transparent;
-            box-shadow: 0px 10px 30px black;
             display: grid;
             grid-template-columns: 100%;
-            grid-template-rows: 1fr 10%;
+            grid-template-rows: 10% 1fr 10%;
+            row-gap: 15px;
             
+            .quiz-title {
+                border-radius: 10px;
+                box-shadow: 0px 10px 30px black;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
             .question-answer {
                 display: grid;
                 grid-template-columns: 100%;
-                grid-template-rows: 10% 25% 1fr;
-    
-                .quiz-title {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                }
+                grid-template-rows: 20% 1fr;
+                border-radius: 10px;
+                box-shadow: 0px 10px 30px black;
+                
                 
                 .question-container {
                     display: flex;
@@ -77,22 +85,23 @@
                     align-items: center;
                     
                     .question-box {
-                        padding: auto 0;
+                        padding: auto 5px;
                         overflow-wrap: normal;
                         text-align: center;
                     }
                 }
-    
-    
+                
+                
                 .answers-box {
                     display: grid;
                     grid-template-columns: 100%;
                     grid-template-rows: 1fr 1fr 1fr 1fr;
-    
+                    justify-items: center;
+                    
                     button {
                         text-align: center;
-                        width: 100%;
-                        height: 100%;
+                        width: 50%;
+                        height: 60%;
                         padding: 0 5px 5px 0;
                         border: none;
                         font-family: inherit;
@@ -114,6 +123,8 @@
                 display: grid;
                 grid-template-columns: 30% 1fr 30%;
                 button {
+                    border-radius: 10px;
+                    box-shadow: 0px 10px 30px black;
                     width: 100%;
                     height: 100%;
                     background: transparent;
@@ -156,17 +167,20 @@
             right: 5%;
             left: 5%;
             height: 70vh;
-            background-color: rgba(0,0,0,0.7);
+            background-color: #1a202c;
+            border-radius: 10px;
             z-index: 20;
             color: white;
             border: none;
             display: grid;
             grid-template-columns: 100%;
             grid-template-rows: 20% 20% 1fr;
+            box-shadow: 0px 10px 30px black;
             
             .select-header {
                 width: 100%;
                 height: 100%;
+                color: white;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -201,23 +215,29 @@
             right: 5%;
             left: 5%;
             height: 70vh;
+            border-radius: 10px;
             border: none;
             background: transparent;
-            box-shadow: 0px 10px 30px black;
             display: grid;
             grid-template-columns: 100%;
-            grid-template-rows: 1fr 10%;
+            grid-template-rows: 10% 1fr 10%;
+            row-gap: 15px;
             
+            .quiz-title {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 10px;
+                box-shadow: 0px 10px 30px black;
+            }
+
             .question-answer {
                 display: grid;
                 grid-template-columns: 100%;
-                grid-template-rows: 10% 25% 1fr;
+                grid-template-rows: 20% 1fr;
+                border-radius: 10px;
+                box-shadow: 0px 10px 30px black;
     
-                .quiz-title {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                }
                 
                 .question-container {
                     display: flex;
@@ -257,6 +277,8 @@
                 display: grid;
                 grid-template-columns: 30% 1fr 30%;
                 button {
+                    border-radius: 10px;
+                    box-shadow: 0px 10px 30px black;
                     width: 100%;
                     height: 100%;
                     background: transparent;
