--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,141 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background: linear-gradient(to top, #1a202c, #4a5568);
-  font-family: "Roboto", sans-serif;
-  height: 100vh;
-  width: 100vw;
-}
-
-@media only screen and (min-width: 501px) {
-  header {
-    height: 20vh;
-    width: 100vw;
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 100;
-  }
-  header nav {
-    height: 40%;
-    width: 90%;
-    border-radius: 40px;
-    background: transparent;
-    box-shadow: 0 4px 8px black;
-  }
-  header nav .options {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-  }
-  header nav button {
-    font-family: inherit;
-    font-size: large;
-    font-weight: 500;
-    width: 20%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    transition: color 150ms;
-  }
-  header nav button:hover {
-    transition: color 150ms;
-    color: white;
-  }
-  header nav button:active {
-    transition: color 150ms;
-    color: black;
-  }
-  header nav p {
-    font-size: larger;
-    text-align: center;
-  }
-}
-@media only screen and (min-width: 301px) and (max-width: 500px) {
-  header {
-    height: 20vh;
-    width: 100vw;
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 100;
-  }
-  header nav {
-    height: 40%;
-    width: 100%;
-    border-radius: none;
-    background: transparent;
-    box-shadow: 0 4px 8px black;
-  }
-  header nav .options {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-  }
-  header nav p {
-    font-size: larger;
-    text-align: center;
-  }
-  header nav button {
-    font-family: inherit;
-    font-size: small;
-    font-weight: 500;
-    width: 20%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    transition: color 150ms;
-  }
-}
-@media only screen and (max-width: 300px) {
-  header {
-    height: 20vh;
-    width: 100vw;
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 100;
-  }
-  header nav {
-    height: 40%;
-    width: 100%;
-    border-radius: none;
-    background: transparent;
-    box-shadow: 0 4px 8px black;
-  }
-  header nav .options {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-  }
-  header nav p {
-    font-size: larger;
-    text-align: center;
-  }
-  header nav button {
-    font-family: inherit;
-    font-size: x-small;
-    font-weight: 500;
-    width: 20%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    transition: color 150ms;
-  }
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");*,:after,:before{box-sizing:border-box;margin:0;padding:0}body{background:linear-gradient(0deg,#1a202c,#4a5568);font-family:Roboto,sans-serif;height:100vh;width:100vw}@media only screen and (min-width:501px){header{align-items:center;display:flex;height:20vh;justify-content:center;position:fixed;width:100vw;z-index:100}header nav{background:transparent;border-radius:40px;box-shadow:0 4px 8px #000;height:40%;width:90%}header nav .options{align-items:center;display:flex;height:100%;justify-content:space-evenly;width:100%}header nav button{background:transparent;border:none;font-family:inherit;font-size:large;font-weight:500;height:100%;transition:color .15s;width:20%}header nav button:hover{color:#fff;transition:color .15s}header nav button:active{color:#000;transition:color .15s}header nav p{font-size:larger;text-align:center}}@media only screen and (min-width:301px) and (max-width:500px){header{align-items:center;display:flex;height:20vh;justify-content:center;position:fixed;width:100vw;z-index:100}header nav{background:transparent;border-radius:none;box-shadow:0 4px 8px #000;height:40%;width:100%}header nav .options{align-items:center;display:flex;height:100%;justify-content:space-evenly;width:100%}header nav p{font-size:larger;text-align:center}header nav button{background:transparent;border:none;font-family:inherit;font-size:small;font-weight:500;height:100%;transition:color .15s;width:20%}}@media only screen and (max-width:300px){header{align-items:center;display:flex;height:20vh;justify-content:center;position:fixed;width:100vw;z-index:100}header nav{background:transparent;border-radius:none;box-shadow:0 4px 8px #000;height:40%;width:100%}header nav .options{align-items:center;display:flex;height:100%;justify-content:space-evenly;width:100%}header nav p{font-size:larger;text-align:center}header nav button{background:transparent;border:none;font-family:inherit;font-size:x-small;font-weight:500;height:100%;transition:color .15s;width:20%}}
